style.css
@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");

:root {
	--line-border-fill: #000000;
	--line-border-empty: #e0e0e0;
}

* {
	box-sizing: border-box;
}

body {
	background: hsla(217, 100%, 50%, 1);
	background: linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
	background: -moz-linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
	background: -webkit-linear-gradient(90deg, hsla(217, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#0061FF", endColorstr="#60EFFF", GradientType=1 );
	font-family: "Muli", "sans-serif";
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100vh;
	overflow: hidden;
	margin: 0;
}

.container {
	text-align: center;
	font-weight: bold;
}

.progress-container {
	display: flex;
	justify-content: space-between;
	position: relative;
	margin-bottom: 30px;
	max-width: 100%;
	width: 350px;
}

.progress-container::before {
	content:'';
	background-color: var(--line-border-empty);
	position: absolute;
	top: 50%;
	left: 0;
	transform: translateY(-50%);
	height: 4px;
	width: 100%;
	z-index: -1;
}

.progress {
	background-color: var(--line-border-fill);
	position: absolute;
	top: 50%;
	left: 0;
	transform: translateY(-50%);
	height: 4px;
	width: 0%;
	max-width: 98%;
	z-index: -1;
	transition: .4s ease;
}

.circle {
	background-color: #fff;
	color: #000;
	border-radius: 50%;
	height: 30px;
	width: 30px;
	display: flex;
	align-items: center;
	justify-content: center;
	border: 3px solid var(--line-border-empty);
	transition: .4s ease;
}

.circle.active {
	border-color: var(--line-border-fill);
}

.btn {
	background-color: var(--line-border-fill);
	color: white;
	border: 0;
	border-radius: 6px;
	cursor: pointer;
	font-family: inherit;
	padding: 8px 30px;
	margin: 5px;
	font-size: 1rem;
	font-style: italic;
}

.btn:active {
	transform: scale(0.98);
}

.btn:focus {
	outline: 0;
}

.btn:disabled {
	background: var(--line-border-empty);
	cursor: not-allowed;
}

